--- a/tree.html
+++ b/tree.html
@@ -7,6 +7,11 @@
  <body>
     <!-- Display the tree (without leaf)  -->
     <h1>Bookmark Tree</h1>
+    <div>
+     <form>
+      <input type="checkbox" name="flat" value="flat" id="flat"><label for="flat"> Flat</label>
+      </form>
+    </div>
     <div id="tree"></div>
  </body>
 </html>
