Add button to switch views

--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
     <h1>Bookmark Table</h1>
     <div>
      <form>
-      <input type="checkbox" name="flat" value="flat" id="flat"><label for="flat"> Flat</label>
+         <button type="button" name="Tree" id="view_button">Tree</button>
       </form>
     </div>
     <div>
