--- a/tree.html
+++ b/tree.html
@@ -9,6 +9,7 @@
     <h1>Bookmark Tree</h1>
     <div>
      <form>
+      <button type="button" id="view_button">Table</button>
       <input type="checkbox" name="flat" value="flat" id="flat"><label for="flat"> Flat</label>
       </form>
     </div>
