--- a/table.html
+++ b/table.html
@@ -10,7 +10,8 @@
     <h1>Bookmark Table</h1>
     <div>
      <form>
-         <button type="button" name="Tree" id="view_button">Tree</button>
+         <button type="button" name="Tree" id="view_tree">Tree</button>
+         <button type="button" name="d3Tree" id="view_d3tree">D3 Tree</button>
       </form>
     </div>
     <div>
