--- a/table.html
+++ b/table.html
@@ -10,8 +10,10 @@
     <h1>Bookmark Table</h1>
     <div>
      <form>
+         <button type="button" name="Save" id="save_bkm">Save</button>
          <button type="button" name="Tree" id="view_tree">Tree</button>
          <button type="button" name="d3Tree" id="view_d3tree">D3 Tree</button>
+         <button type="button" name="Act" id="act_bkm">Act</button>
       </form>
     </div>
     <div>
